<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_tabata_list"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mi1.projet.tabata.TabataListActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_weight="0.3">

        <TextView
            android:text="@string/enter_tabata_s_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView4"
            android:layout_weight="1" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="Tabata"
            android:ems="10"
            android:id="@+id/act_tabata_list_name_et"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <Button
            android:text="@string/add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_tabata_list_add_button"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@color/common_google_signin_btn_text_dark_default" />

        <Button
            android:text="@string/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_tabata_list_delete_button"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.3">

        <Button
            android:text="@string/update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_tabata_list_update_button"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/white" />

        <Button
            android:text="@string/select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/act_tabata_list_select_button"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.1">

        <ListView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/act_tabata_list_listView" />
    </LinearLayout>

</LinearLayout>
